--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "researcher",
+  "name": "ai-avatar",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,13 +10,25 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@langchain/community": "^0.3.29",
+    "@langchain/core": "^0.3.39",
+    "@langchain/langgraph": "^0.2.45",
+    "@langchain/openai": "^0.4.3",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@react-three/drei": "^9.121.4",
+    "@react-three/fiber": "^9.0.0-rc.7",
+    "@types/three": "^0.173.0",
+    "ai": "^4.1.34",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "langchain": "^0.3.15",
+    "leva": "^0.10.0",
     "lucide-react": "^0.475.0",
+    "microsoft-cognitiveservices-speech-sdk": "^1.42.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
+    "openai": "^4.83.0",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
     "react": "^19.0.0",
@@ -25,7 +37,9 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1"
+    "three": "^0.173.0",
+    "zod": "^3.24.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -41,5 +55,12 @@
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@react-three/drei": {
+      "@react-three/fiber": "^9.0.0-rc.7",
+      "react": "^19.0.0",
+      "react-dom": "^19.0.0"
+    }
   }
 }
